#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uwhoisd"
dynamic = ["version"]
description = "Universal domain WHOIS proxy server"
license = { file = "LICENSE" }
authors = [{ name = "Keith Gaughan", email = "k@stereochro.me" }]
requires-python = ">= 3.8"
readme = "README.md"
dependencies = [
    "netaddr>=1.3.0",
    "tornado>=6.4.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

[project.urls]
Source = "https://github.com/kgaughan/uwhoisd"

[project.scripts]
uwhoisd = "uwhoisd:main"
uwhoisd-scraper = "uwhoisd.scraper:main"

[project.entry-points."uwhoisd.cache"]
lfu = "uwhoisd.caching:LFU"

[tool.rye]
dev-dependencies = [
    "mypy>=1.11.1",
    "coverage>=7.6.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "types-beautifulsoup4>=4.12.0.20240511",
]
universal = true
generate-hashes = true
managed = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC002",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913",
  "PLR2004",
  "PLW2901",
  "S310",
  "S317",
  "T201",
  "TID252",
  "UP006",
  "UP035",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/uwhoisd --junitxml=tests/results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"

[tool.coverage.run]
branch = true

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uwhoisd/_version.py"
