#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uwhoisd"
dynamic = ["version"]
description = "Universal domain WHOIS proxy server"
license = { file = "LICENSE" }
authors = [{ name = "Keith Gaughan", email = "k@stereochro.me" }]
requires-python = ">=3.9"
readme = "README.md"
keywords = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "requests>=2.32.3",
]

[project.urls]
Documentation = "https://github.com/kgaughan/uwhoisd#readme"
Issues = "https://github.com/kgaughan/uwhoisd/issues"
Source = "https://github.com/kgaughan/uwhoisd"

[project.scripts]
uwhoisd = "uwhoisd:main"
uwhoisd-scraper = "uwhoisd.scraper:main"

[project.entry-points."uwhoisd.cache"]
lfu = "uwhoisd.caching:LFU"

[tool.uv]
dev-dependencies = [
  "mypy>=1.11.1",
  "coverage>=7.6.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "types-beautifulsoup4>=4.12.0.20240511",
  "types-requests>=2.32.0.20240712",
]
managed = true

[tool.hatch.build.targets.sdist]
include = [
  "/src/uwhoisd",
  "/uv.lock",
  "/extra",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uwhoisd"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uwhoisd/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC002",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913",
  "PLR2004",
  "PLW2901",
  "S310",
  "S317",
  "T201",    # Allow print
  "TID252",
  "UP006",
  "UP035",
  "EM101",
  "N817",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/uwhoisd --junitxml=tests/results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/uwhoisd/_version.py"]

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.mypy]
ignore_missing_imports = true
