#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uwhoisd"
dynamic = ["version"]
description = "Universal domain WHOIS proxy server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Keith Gaughan", email = "k@stereochro.me" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "requests>=2.32.3",
]

[project.urls]
Documentation = "https://github.com/kgaughan/uwhoisd#readme"
Issues = "https://github.com/kgaughan/uwhoisd/issues"
Source = "https://github.com/kgaughan/uwhoisd"

[project.scripts]
uwhoisd = "uwhoisd:main"
uwhoisd-scraper = "uwhoisd.scraper:main"

[project.entry-points."uwhoisd.cache"]
lfu = "uwhoisd.caching:LFU"

[dependency-groups]
dev = [
  "mypy>=1.11.1",
  "coverage>=7.6.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "types-beautifulsoup4>=4.12.0.20240511",
  "types-requests>=2.32.0.20240712",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/uwhoisd",
  "uv.lock",
  "extra",
]

[tool.hatch.build.targets.wheel]
packages = ["src/uwhoisd"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uwhoisd/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  # "ANN",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "ISC002",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913", # Too many arguments
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Redefined loop variable
  "S310",    # Audit URL open for permitted schemes
  "S317",    # Using xml to parse untrusted data is known to be vulnerable to XML attacks; use defusedxml equivalents
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "UP006",   # Use {to} instead of {from} for type annotation
  "UP035",   # Deprecated import
  "EM101",   # Exceptions must not use strings
  "EM102",   # Exception must not use f-string literal
  "TRY003",  # Avoid specifying long messages outside the exception class
  "T201",    # Allow print
  "N817",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["ANN", "PLR2004", "S101", "TID252", "E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules --cov=uwhoisd --junitxml=results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/uwhoisd/_version.py"]

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.mypy]
ignore_missing_imports = true
